[package]
name = "to_serial_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2r = "0.8.0"
serde = "1.0.193"
serde_json = "1.0.108"
serialport = "4.2.2"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
